--- a/app/src/main/res/layout/activity_get_details.xml
+++ b/app/src/main/res/layout/activity_get_details.xml
@@ -63,6 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_card_view_heading"
                 android:layout_marginLeft="20dp"
+                android:inputType="text"
+                android:maxLines="1"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:hint="@string/your_name" />
@@ -72,6 +74,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/et_your_name"
+                android:inputType="phone"
+                android:maxLines="1"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
